@@ -6,6 +6,9 @@ Changes since version 1.1.0
   "Ice.config=MyFile" (instead of "Ice.Config=MyFile") from slipping through
   undetected.
 
+- added DB_PRIVATE flag to DBEnv->open(), to be able to use the 
+  Berkeley DB that ships with RedHat 9.
+
 Changes since version 1.0.1
 ---------------------------
 
